Yet another tweak to scroll listener code

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -2665,6 +2665,8 @@ function addScrollListener(fn, name, options = { }, target = document) {
      */
     if (name)
         GW.scrollListeners[name] = { wrapper: wrapper, target: target };
+
+	return wrapper;
 }
 /*  Removes a named scroll event listener from the page.
  */
