default.html: ensure a '#link-bibliography' ID exists even before the transclusion happens, in case a reader tries to link to '/Foo#link-bibliography' (this will not be redundant with the transcluded link bibliography section header, because the transclusion replaces the entire link/div)

--- a/templates/default.html
+++ b/templates/default.html
@@ -120,7 +120,7 @@
 
         $body$
 
-        $if(index)$ $else$<div id="link-bibliography-transclusion"><a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include include-replace-container">bibliography</a></div>$endif$
+        $if(index)$ $else$<div id="link-bibliography"><a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include include-replace-container">bibliography</a></div>$endif$
         </div>
         <!-- NOTE: unmatched, because it closes the opening <div> from $$body$$ Pandoc template -->
 
