--- a/css/default.css
+++ b/css/default.css
@@ -5005,7 +5005,8 @@ section.highlight-fading::before {
 	padding-bottom: 0.375em;
 }
 
-.backlinks-append .columns ul {
+.annotation-see-also > div > div > ul,
+.backlinks-append > div > ul {
 	margin-top: 0.5em;
 }
 
