Tweak to transcluded annotation styling

--- a/css/default.css
+++ b/css/default.css
@@ -4897,6 +4897,7 @@ section.highlight-fading::before {
  */
 .data-field.title {
     text-indent: 0;
+	text-align: left;
 }
 
 /*  Images (such as the ones in Wikipedia annotations).
