update all mentions of 'invertible' for new short more easily typed & remembered name, 'invert'

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1887,14 +1887,14 @@ span.smallcaps {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%23000"/></svg>');
 }
 
-/*	Create a ‘footer’ at the bottom of pages which looks like ‘—————𝔊—————’, 
+/*	Create a ‘footer’ at the bottom of pages which looks like ‘—————𝔊—————’,
 	similar to the arabesque navbar.
 
 	Footers help denote “this is the end”, and avoid the somewhat lame effect of
-	just having the anonymous feedback link at the end of the page and ending 
+	just having the anonymous feedback link at the end of the page and ending
 	there with nothing else.
 
-	NOTE: this is for mobile only, and takes the place of desktop’s full 
+	NOTE: this is for mobile only, and takes the place of desktop’s full
 	arabesque navbar (see default.css).
 
 	Implementation: Modifying the ‘fill’ does not work so well when we call an
@@ -1993,7 +1993,7 @@ table th.tablesorter-headerDesc {
     background-image: url('data:image/gif;base64,R0lGODlhBAAEAPAAMQAAAL+/vywAAAAABAAEAAACBkwAhqgZBQA7');
 }
 
-/*  Images that are marked as invertible by the server are inverted,
+/*  Images that are marked as '.invert' by the server are inverted,
     hue-rotated, and desaturated. Other (non-invertible) images are merely
     desaturated. Hovering over an image restores it to its original state.
     Hierarchy: ‘.invert-not’: no inversion or grayscale;
