--- a/templates/default.html
+++ b/templates/default.html
@@ -120,7 +120,7 @@
 
         $body$
 
-        $if(index)$ $else$<div id="link-bibliography"><a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include include-replace-container">bibliography</a></div>$endif$
+        $if(index)$ $else$<section id="link-bibliography" class="level1"><a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-replace-container-not">Link bibliography</a></section>$endif$
         </div>
         <!-- NOTE: unmatched, because it closes the opening <div> from $$body$$ Pandoc template -->
 
