--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -1911,15 +1911,15 @@ span.smallcaps {
 /*  The ‘celestial symbol’ horizontal rules are SVGs and must be inverted.
  */
 hr::after,
-.horizontalRule-nth-0 hr::after {
+.horizontal-rule-nth-0 hr::after {
     opacity: 1;
     filter: invert(1) drop-shadow(0 0 0 currentColor);
 }
-.horizontalRule-nth-1 hr::after {
+.horizontal-rule-nth-1 hr::after {
     opacity: 0.75;
     filter: invert(1);
 }
-.horizontalRule-nth-2 hr::after {
+.horizontal-rule-nth-2 hr::after {
     opacity: 0.85;
     filter: invert(1);
 }
