--- a/templates/default.html
+++ b/templates/default.html
@@ -122,7 +122,7 @@
 
         $if(index)$ $else$<section id="link-bibliography" class="level1"><a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-replace-container-not">Link bibliography</a></section>$endif$
         </div>
-        <!-- NOTE: unmatched, because it closes the opening <div> from $$body$$ Pandoc template -->
+        <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
         <nav id="navigation">
           <a id="navigation-previous" class="link-local-not" rel="prev" href="$previous$" title="Link to previous page by topic, ‘$previous$’"
