renaming: docs/japanese/ -> docs/japan/

--- a/404.page
+++ b/404.page
@@ -171,7 +171,7 @@ Other search options:
 - [Resorting Media Ratings](/Resorter "Branwen 2015"){.backlink-not}
 - [Caffeine wakeup experiment](/zeo/Caffeine "Branwen 2013"){.backlink-not}
 - [Terrorism is not Effective](/Terrorism-is-not-Effective){.backlink-not}
-- ["Shiny Balls of Mud"](/docs/japanese/2002-gibson){.backlink-not}
+- ["Shiny Balls of Mud"](/docs/japan/2002-gibson){.backlink-not}
 - [`/docs/anime/index`](/docs/anime/index "'Essays', N/A 2009"){.backlink-not}
 - [SMPY Bibliography](/SMPY "Branwen 2018"){.backlink-not}
 - [Cat Psychology & Domestication: Are We Good Owners?](/reviews/Cat-Sense "Branwen 2018"){.backlink-not}
@@ -207,7 +207,7 @@ Other search options:
 - [Efficient Attention: Breaking The Quadratic Transformer Bottleneck](/notes/Attention "Branwen 2020"){.backlink-not}
 - [May 1997 _AnimeLand_ Interview with Hideaki Anno (English)](/docs/anime/eva/1997-animeland-may-hideakianno-interview-english "Anno 2012"){.backlink-not}
 - [RNN Metadata for Mimicking Author Style](/RNN-metadata "Branwen 2015"){.backlink-not}
-- [`/docs/japanese/teika`](/docs/japanese/teika){.backlink-not}
+- [`/docs/japan/teika`](/docs/japan/teika){.backlink-not}
 - [Lithium in ground-water and well-being](/Lithium "Branwen 2010"){.backlink-not}
 - [Making Anime With BigGAN](/BigGAN "Branwen 2019"){.backlink-not}
 - [Superrationality, Hofstadter 1985](/docs/existential-risk/1985-hofstadter "‘Metamagical Themas: Sanity and Survival’, Hofstadter 2012"){.backlink-not}
