default.html: link-bib: sharpen link to remove vertical whitespace

--- a/templates/default.html
+++ b/templates/default.html
@@ -120,7 +120,7 @@
 
         $body$
 
-        $if(index)$ $else$<section id="link-bibliography" class="level1"><a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-replace-container-not">Link bibliography</a></section>$endif$
+        $if(index)$ $else$<section id="link-bibliography" class="level1"><a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$#link-bibliography" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-replace-container-not">Link bibliography</a></section>$endif$
         </div>
         <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
