--- a/404.page
+++ b/404.page
@@ -203,7 +203,7 @@ Try to remember... Other options:
 - [Efficient Attention: Breaking The Quadratic Transformer Bottleneck](/notes/Attention "Branwen 2020"){.backlink-not .icon-not}
 - [May 1997 _AnimeLand_ Interview with Hideaki Anno (English)](/docs/anime/eva/1997-animeland-may-hideakianno-interview-english "Anno 2012"){.backlink-not .icon-not}
 - [RNN Metadata for Mimicking Author Style](/RNN-metadata "Branwen 2015"){.backlink-not .icon-not}
-- [`/docs/japan/teika`](/docs/japan/teika){.backlink-not .icon-not}
+- [`/docs/japan/poetry/teika/teika`](/docs/japan/poetry/teika/teika){.backlink-not .icon-not}
 - [Lithium in ground-water and well-being](/Lithium "Branwen 2010"){.backlink-not .icon-not}
 - [Making Anime With BigGAN](/BigGAN "Branwen 2019"){.backlink-not .icon-not}
 - [Superrationality, Hofstadter 1985](/docs/existential-risk/1985-hofstadter "‘Metamagical Themas: Sanity and Survival’, Hofstadter 2012"){.backlink-not .icon-not}
