LM/default: update .include-no-spinner -> include-spinner-not

--- a/templates/default.html
+++ b/templates/default.html
@@ -127,7 +127,7 @@
           $if(similarsYes)$<a id="similars" href="/metadata/annotations/similars/$escapedURL$" title="Similar links for this link (by text embedding)." class="include-unwrap">similar</a>$endif$
         </section>
         <section id="link-bibliography" class="level1">
-          <a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$#link-bibliography" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-replace-container-not">Link bibliography</a>
+          <a id="link-bibliography-link-footer-transclusion" href="/docs/link-bibliography$url$#link-bibliography" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-unwrap include-identify-not">Link Bibliography</a>
         </section>$endif$
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
