--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -342,7 +342,7 @@
 
 :root {
     --GW-serif-font-stack: "Source Serif Pro", "Apple Garamond", "Baskerville", "Libre Baskerville", "Droid Serif", "Times New Roman", "Times", serif, "Noto Emoji", "Quivira";
-    --GW-sans-serif-font-stack: "Lucida Sans Unicode", "Source Sans Pro", "Helvetica", "Trebuchet MS", sans-serif, "Noto Emoji", "Quivira";
+    --GW-sans-serif-font-stack: "Source Sans Pro", "Lucida Sans Unicode", "Helvetica", "Trebuchet MS", sans-serif, "Noto Emoji", "Quivira";
     --GW-monospaced-font-stack: "IBM Plex Mono", "Liberation Mono", "Consolas", "Courier", monospace, "Noto Emoji", "Quivira";
 
     --GW-body-text-font-size: 1rem;
