default: missed an anchor update

--- a/templates/default.html
+++ b/templates/default.html
@@ -110,7 +110,7 @@
               <span id="page-confidence"><a href="/About#confidence-tags" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')">certainty</a>: <em>$confidence$</em></span>
               <span id="page-importance"><a href="/About#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span> <br>
               $if(backlinksYes)$<span class="backlinks"><a id="page=backlinks" class="backlinks" href="#further-reading" title="Reverse citations/backlinks for this page (the list of other pages which link to this page).">backlinks</a></span>$endif$
-              $if(similarsYes)$<span class="similars"><a id="page-similars" class="similars" href="#similars-link-footer-transclusion" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
+              $if(similarsYes)$<span class="similars"><a id="page-similars" class="similars" href="#similars" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
               <span class="link-bibliography"><a id="page-link-bibliography" href="#link-bibliography" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>
           </div>
         </div>
