--- a/404.page
+++ b/404.page
@@ -41,7 +41,7 @@ Try to remember... Other options:
 - [Spaced Repetition for Efficient Learning](/Spaced-repetition "Branwen 2009"){.backlink-not .icon-not}
 - [My Ordinary Life: Improvements Since the 1990s](/Improvements "Branwen 2018"){.backlink-not .icon-not}
 - [Laws of Tech: Commoditize Your Complement](/Complement "Branwen 2018"){.backlink-not .icon-not}
-- [`/newsletter/2020/05`](/newsletter/2020/05){.backlink-not .icon-not}
+- [`/newsletter/2020/05`](/newsletter/2020/05 "‘May 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [Modafinil](/Modafinil){.backlink-not .icon-not}
 - [Nootropics](/Nootropics){.backlink-not .icon-not}
 - [Internet Search Tips](/Search "Branwen 2018"){.backlink-not .icon-not}
@@ -87,7 +87,7 @@ Try to remember... Other options:
 - [Archiving URLs](/Archiving-URLs){.backlink-not .icon-not}
 - [Choose-Your-Own-Adventure AI Dungeon Games](/CYOA "Branwen 2021"){.backlink-not .icon-not}
 - [Miscellaneous](/Notes "Branwen 2009"){.backlink-not .icon-not}
-- [_Evangelion 2.0: The Complete Records Collection_](/docs/anime/eva/2010-crc){.backlink-not .icon-not}
+- [_Evangelion 2.0: The Complete Records Collection_](/docs/anime/eva/2010-crc "‘Evangelion 2.0 Complete Records Collection’, Hikawa et al 2011"){.backlink-not .icon-not}
 - [Prediction markets](/Prediction-markets){.backlink-not .icon-not}
 - [Time-lock encryption](/Self-decrypting-files "Branwen 2011"){.backlink-not .icon-not}
 - [Genetics and Eugenics in Frank Herbert’s Dune-verse](/Dune-genetics "Branwen 2018"){.backlink-not .icon-not}
@@ -111,7 +111,7 @@ Try to remember... Other options:
 - [`/newsletter/2020/10`](/newsletter/2020/10 "‘October 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [`/newsletter/2020/11`](/newsletter/2020/11 "‘November 2020 News’, Branwen 2019"){.backlink-not .icon-not}
 - [Terrorism is not about Terror](/Terrorism-is-not-about-Terror){.backlink-not .icon-not}
-- [Sunk costs](/Sunk-cost){.backlink-not .icon-not}
+- [Sunk costs](/Sunk-cost "‘Are Sunk Costs Fallacies?’, Branwen 2012"){.backlink-not .icon-not}
 - [Magnesium Self-Experiments](/nootropics/Magnesium "Branwen 2013"){.backlink-not .icon-not}
 - [The Math of Hunting Lions](/notes/Lions){.backlink-not .icon-not}
 - [`/newsletter/2020/04`](/newsletter/2020/04 "‘April 2020 News’, Branwen 2019"){.backlink-not .icon-not}
@@ -134,7 +134,7 @@ Try to remember... Other options:
 - [Dual _n_-Back Meta-Analysis](/DNB-meta-analysis "Branwen 2012"){.backlink-not .icon-not}
 - [When Should I Check The Mail?](/Mail-delivery "Branwen 2015"){.backlink-not .icon-not}
 - [`/newsletter/2021/04`](/newsletter/2021/04 "‘April 2021 News’, Branwen 2020"){.backlink-not .icon-not}
-- [The Existential Risk of Mathematical Error](/The-Existential-Risk-of-Mathematical-Error){.backlink-not .icon-not}
+- [The Existential Risk of Mathematical Error](/The-Existential-Risk-of-Mathematical-Error "‘The Existential Risk of Math Errors’, Branwen 2012"){.backlink-not .icon-not}
 - ["Ero-Anime: Manga Comes Alive"](/docs/anime/2010-sarrazin){.backlink-not .icon-not}
 - [The "Screwfly Solution" Solution: Bi-Sexuality](/Screwfly){.backlink-not .icon-not}
 - [Predicting Google closures](/Google-shutdowns "Branwen 2013"){.backlink-not .icon-not}
@@ -142,19 +142,19 @@ Try to remember... Other options:
 - [The Notenki Memoirs: Studio Gainax And The Men Who Created Evangelion](/docs/anime/eva/2002-takeda-notenkimemoirs "Takeda 2010"){.backlink-not .icon-not}
 - [Who Wrote The _Death Note_ Script?](/Death-Note-script "Branwen 2009"){.backlink-not .icon-not}
 - [Rubrication Design Examples](/Red "Branwen 2019"){.backlink-not .icon-not}
-- [Longevity decision analysis](/Longevity){.backlink-not .icon-not}
+- [Longevity decision analysis](/Longevity "‘Life Extension Cost-Benefits’, Branwen 2015"){.backlink-not .icon-not}
 - [`/newsletter/2019/13`](/newsletter/2019/13 "‘2019 News’, Branwen 2019"){.backlink-not .icon-not}
-- [_Utena_ boxset notes](/docs/anime/1997-utena){.backlink-not .icon-not}
+- [_Utena_ boxset notes](/docs/anime/1997-utena "‘Utena 2011 Boxset Booklet Commentary’, Ikuhara et al 2013"){.backlink-not .icon-not}
 - [Tryon’s Rat Experiment](/Tryon "Branwen 2020"){.backlink-not .icon-not}
 - [_Genius Revisited_ Revisited](/Hunter "Branwen 2016"){.backlink-not .icon-not}
 - [Epigrams](/Epigrams){.backlink-not .icon-not}
 - [`/newsletter/2020/09`](/newsletter/2020/09 "‘September 2020 News’, Branwen 2019"){.backlink-not .icon-not}
-- [_Death Note_ Ending](/Death-Note-Ending){.backlink-not .icon-not}
+- [_Death Note_ Ending](/Death-Note-Ending "‘Death Note’s Ending’, Branwen 2008"){.backlink-not .icon-not}
 - [The Melancholy of Kyon](/The-Melancholy-of-Kyon){.backlink-not .icon-not}
 - [Calculating The Gaussian Expected Maximum](/Order-statistics "Branwen 2016"){.backlink-not .icon-not}
 - [Vitamin D sleep experiments](/zeo/Vitamin-D "Branwen 2012"){.backlink-not .icon-not}
 - [GPT-2 Preference Learning for Music Generation](/GPT-2-preference-learning "Branwen 2019"){.backlink-not .icon-not}
-- [Hafu in anime](/Hafu){.backlink-not .icon-not}
+- [Hafu in anime](/Hafu "‘Hafu Gender Ratios in Anime’, Branwen 2011"){.backlink-not .icon-not}
 - [`/komm-susser-tod`](/komm-susser-tod){.backlink-not .icon-not}
 - [`/docs/bitcoin/index`](/docs/bitcoin/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - [CO2/ventilation sleep experiment](/zeo/CO2 "Branwen 2016"){.backlink-not .icon-not}
@@ -167,16 +167,16 @@ Try to remember... Other options:
 - [Resorting Media Ratings](/Resorter "Branwen 2015"){.backlink-not .icon-not}
 - [Caffeine wakeup experiment](/zeo/Caffeine "Branwen 2013"){.backlink-not .icon-not}
 - [Terrorism is not Effective](/Terrorism-is-not-Effective){.backlink-not .icon-not}
-- ["Shiny Balls of Mud"](/docs/japan/2002-gibson){.backlink-not .icon-not}
+- ["Shiny Balls of Mud"](/docs/japan/2002-gibson "‘Shiny balls of Mud: William Gibson Looks at Japanese Pursuits of Perfection’, Gibson 2012"){.backlink-not .icon-not}
 - [`/docs/anime/index`](/docs/anime/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - [SMPY Bibliography](/SMPY "Branwen 2018"){.backlink-not .icon-not}
 - [Cat Psychology & Domestication: Are We Good Owners?](/reviews/Cat-Sense "Branwen 2018"){.backlink-not .icon-not}
-- [Wooden pillows](/Wooden-pillows){.backlink-not .icon-not}
+- [Wooden pillows](/Wooden-pillows "‘Wooden Pillow’, Branwen 2008"){.backlink-not .icon-not}
 - [`/docs/psychology/index`](/docs/psychology/index "'Essays', N/A 2009"){.backlink-not .icon-not}
-- [`/notes/Scaling`](/notes/Scaling){.backlink-not .icon-not}
+- [`/notes/Scaling`](/notes/Scaling "‘Machine Learning Scaling’, Branwen 2021"){.backlink-not .icon-not}
 - [Origins of Innovation: Bakewell & Breeding](/reviews/Bakewell "Branwen 2018"){.backlink-not .icon-not}
-- [Conscientiousness and online education](/Conscientiousness-and-online-education){.backlink-not .icon-not}
-- [The Ups and Downs of the Hope Function](/docs/statistics/bayes/1994-falk){.backlink-not .icon-not}
+- [Conscientiousness and online education](/Conscientiousness-and-online-education "‘Conscientiousness & Online Education’, Branwen 2012"){.backlink-not .icon-not}
+- [The Ups and Downs of the Hope Function](/docs/statistics/bayes/1994-falk "‘The Ups and Downs of the Hope Function In a Fruitless Search’, Falk et al 2012"){.backlink-not .icon-not}
 - [`/docs/ai/nn/transformer/gpt/index`](/docs/ai/nn/transformer/gpt/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - ["Loyal to the Group of Seventeen’s Story—The Just Man"](/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman "Wolfe 2018"){.backlink-not .icon-not}
 - [Charity is not about helping](/Charity-is-not-about-helping){.backlink-not .icon-not}
@@ -184,7 +184,7 @@ Try to remember... Other options:
 - [Immoral Books](/Immoral-Books){.backlink-not .icon-not}
 - [A/B testing long-form readability on Gwern.net](/AB-testing "Branwen 2012"){.backlink-not .icon-not}
 - [_McNamara's Folly_: The Denial of Individual Differences](/reviews/McNamara){.backlink-not .icon-not}
-- [Nash 1955](/docs/cs/cryptography/1955-nash){.backlink-not .icon-not}
+- [Nash 1955](/docs/cs/cryptography/1955-nash "‘John Nash on cryptography’, Nash 2012"){.backlink-not .icon-not}
 - [Does Mouse Utopia Exist?](/Mouse-Utopia "Branwen 2019"){.backlink-not .icon-not}
 - [Ordinary Incompetence](/notes/Competence){.backlink-not .icon-not}
 - [`/newsletter/2020/13`](/newsletter/2020/13 "‘2020 News’, Branwen 2019"){.backlink-not .icon-not}
@@ -196,14 +196,14 @@ Try to remember... Other options:
 - [`/docs/insight-porn/index`](/docs/insight-porn/index "'Essays', N/A 2009"){.backlink-not .icon-not}
 - [`/docs/index`](/docs/index "Documents, N/A 2009"){.backlink-not .icon-not}
 - [Fake Journal Club: Teaching Critical Reading](/Fake-Journal-Club "Branwen 2022"){.backlink-not .icon-not}
-- [Wikipedia resume](/Wikipedia-resume){.backlink-not .icon-not}
+- [Wikipedia resume](/Wikipedia-resume "‘Wikipedia Résumé’, Branwen 2010"){.backlink-not .icon-not}
 - [Choosing Software](/Choosing-Software){.backlink-not .icon-not}
 - ["Otaku Talk"](/docs/anime/eva/little-boy/2004-okada){.backlink-not .icon-not}
 - [Reasons of State: Why Didn’t Denmark Sell Greenland?](/Greenland "Branwen 2011"){.backlink-not .icon-not}
 - [Efficient Attention: Breaking The Quadratic Transformer Bottleneck](/notes/Attention "Branwen 2020"){.backlink-not .icon-not}
 - [May 1997 _AnimeLand_ Interview with Hideaki Anno (English)](/docs/anime/eva/1997-animeland-may-hideakianno-interview-english "Anno 2012"){.backlink-not .icon-not}
 - [RNN Metadata for Mimicking Author Style](/RNN-metadata "Branwen 2015"){.backlink-not .icon-not}
-- [`/docs/japan/poetry/teika/teika`](/docs/japan/poetry/teika/teika){.backlink-not .icon-not}
+- [`/docs/japan/poetry/teika/teika`](/docs/japan/poetry/teika/teika "‘The Poems of Fujiwara no Teika’, Teika 2011"){.backlink-not .icon-not}
 - [Lithium in ground-water and well-being](/Lithium "Branwen 2010"){.backlink-not .icon-not}
 - [Making Anime With BigGAN](/BigGAN "Branwen 2019"){.backlink-not .icon-not}
 - [Superrationality, Hofstadter 1985](/docs/existential-risk/1985-hofstadter "‘Metamagical Themas: Sanity and Survival’, Hofstadter 2012"){.backlink-not .icon-not}
