--- a/css/default.css
+++ b/css/default.css
@@ -2515,6 +2515,15 @@ span.link-bibliography a {
 	padding-left: 1.5em;
 }
 
+#further-reading .columns ul {
+	padding-left: 2.5em;
+}
+@media only screen and (max-width: 649px) {
+	#further-reading .columns ul {
+		padding-left: 1.75em;
+	}
+}
+
 
 /***************/
 /* ADMONITIONS */
@@ -4912,10 +4921,12 @@ section.highlight-fading::before {
 
 /*  Images (such as the ones in Wikipedia annotations).
     */
-.annotation > figure.float-right {
-    margin: 0.125em 0 0.125em 1.5em;
-    max-width: calc(50% - 1.5em);
-    float: right;
+@media only screen and (min-width: 650px) {
+	.annotation > figure.float-right {
+		margin: 0.125em 0 0.125em 1.5em;
+		max-width: calc(50% - 1.5em);
+		float: right;
+	}
 }
 .annotation figure.float-left .image-wrapper,
 .annotation figure.float-right .image-wrapper {
